compiler/tests/success/otbn/neg.jazz
export
fn neg(reg u32 arg0) {
    reg u32 x;
    x = -arg0;
    [x] = x;
}
