compiler/tests/fail/arm-m4/intrinsic_ldrshS.jazz
export
fn ldrsh(reg u32 arg) -> reg u32 {
    reg u32 x;
    ?{}, x = #LDRSHS((u16)[arg]);
    reg u32 res;
    res = x;
    return res;
}
